add AmplifyMusic folder for database and copied music

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ build/
 ### ignore icons ###
 icons/
 
+### ignore AmplifyMusic folder ###
+AmplifyMusic/
+
 ### ignore properties ###
 *.properties
 
